--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
 body {
     background-color: white;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10vh;
+    margin: 0;
+}
+
+h1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 50vh;
+    text-align: center;
+    margin-top: 0;
+    padding-top: 20px;
+    pointer-events: none;
+    z-index: -1;
+    background: -webkit-linear-gradient(#dbebfa, #91bdff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
 
 #searchButton {
     color: rgb(47, 47, 47);
-    height: 40px;
-    font-size: large;
+    height: 60px;
+    width: 100px;
+    font-size: x-large;
     font-family: 'Trebuchet MS';
 }
 
@@ -15,28 +38,27 @@ body {
 }
 
 .center-search input {
-    width: 200px;
-    height: 40px;
+    width: 400px;
+    height: 60px;
     padding: 10px;
     margin: 10px;
-    font-size: large;
+    font-size: x-large;
     font-family: 'Trebuchet MS';
 }
 
 .container-row {
     display: flex;
     justify-content: center;
-    margin-top: 30vh;
+    margin-top: 20vh;
 }
 
 .container {
     width: 130px;
-    /* Set your desired width */
     height: 100px;
-    /* Set your desired height */
     margin: 0 10px;
-    /* Set the horizontal margin between containers */
-    background-color: rgb(244, 244, 244);
+    font-family: 'Trebuchet MS';
+    font-size: large;
+    background-color: rgb(255, 255, 255);
     text-align: center;
 
 }
